--- a/02-Challenge/Develop/package.json
+++ b/02-Challenge/Develop/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "static-site",
+  "name": "crispy-rotary-phone",
   "version": "1.0.0",
+  "description": "# 09 Node.js Challenge: Professional README Generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.5.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/evelyntorress/crispy-rotary-phone.git"
   },
   "keywords": [],
-  "description": ""
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/evelyntorress/crispy-rotary-phone/issues"
+  },
+  "homepage": "https://github.com/evelyntorress/crispy-rotary-phone#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
